# orbbec-astra-acquisition-tool

./: .gitignore  .gitmodules  README.md
AcquisitionTool/: CMakeLists.txt  main.cpp
tools/: CMakeLists.txt
tools/AcquisitionTool/: CMakeLists.txt
